// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comments > Comment edit > should cancel comment edit and render comment list 1`] = `
<div>
  <main
    class="_Comments_5b6556"
  >
    <header
      class="_header_5b6556"
    >
      <h1>
        Comments
      </h1>
    </header>
    <div
      class="_CommentList_214590"
    >
      <div
        class="_header_214590"
      >
        <h2
          class="_h2_214590"
        >
          Author
        </h2>
      </div>
      <div
        class="_header_214590"
      >
        <h2
          class="_h2_214590"
        >
          Comment
        </h2>
      </div>
      <div
        class="_header_214590"
      >
        <h2
          class="_h2_214590"
        >
          In reponse to
        </h2>
      </div>
      <div
        class="_header_214590"
      >
        <h2
          class="_h2_214590"
        >
          Submmited on
        </h2>
      </div>
      <div
        class="_header_214590"
      />
      <div
        class="_header_214590"
      />
      <ul
        class="_ul_214590"
      >
        <li
          class="_CommentListItem_3a9f83"
        >
          <div
            class="_author_3a9f83"
          >
            <p
              class="_p_3a9f83"
            >
              foobar
            </p>
            <p
              class="_p_3a9f83"
            >
              foo@bar.com
            </p>
          </div>
          <div
            class="_comment_3a9f83"
          >
            <p
              class="_p_3a9f83"
            >
              Comment content 1
            </p>
          </div>
          <div
            class="_post_3a9f83"
          >
            <p
              class="_p_3a9f83"
            >
              Post title 1
            </p>
          </div>
          <div
            class="_submitted_3a9f83"
          >
            4 Dec 2025 at 08:00:00
          </div>
          <a
            class="_edit_3a9f83"
            data-discover="true"
            href="/dashboard/comments/1/edit"
          >
            Edit
          </a>
          <form
            class="_form_3a9f83"
          >
            <input
              class="_delete_3a9f83"
              type="submit"
              value="Delete"
            />
          </form>
        </li>
      </ul>
    </div>
  </main>
</div>
`;

exports[`Comments > Comment edit > should render comment edit 1`] = `
<div>
  <main
    class="_CommentsEdit_5b6556"
  >
    <header
      class="_header_5b6556"
    >
      <h1>
        Comments
      </h1>
    </header>
    <section
      class="_CommentEdit_f3f658"
    >
      <div
        class="_header_f3f658"
      >
        <h2>
          Edit
        </h2>
        <h3
          class="_subHeader_f3f658"
        >
          Post: 
          Post title 1
        </h3>
        <h3
          class="_subHeader_f3f658"
        >
          Comment author: 
          foobar
        </h3>
      </div>
      <form
        class="_form_f3f658"
      >
        <div
          class="_textareaGroup_f3f658"
        >
          <label
            class="_label_f3f658"
            for="content"
          >
            Comment
          </label>
          <textarea
            class="_textarea_f3f658"
            id="content"
            name="content"
            type="text"
          >
            Comment content 1
          </textarea>
        </div>
        <div
          class="_selectGroup_f3f658"
        >
          <label
            class="_label_f3f658"
          >
            Status
          </label>
          <select
            class="_select_f3f658"
            name="status"
          >
            <option
              value="true"
            >
              Published
            </option>
            <option
              value="false"
            >
              Unpublished
            </option>
          </select>
        </div>
        <div
          class="_buttonContainer_f3f658"
        >
          <input
            class="_submit_f3f658"
            type="submit"
            value="Submit"
          />
        </div>
        <div
          class="_buttonContainer_f3f658"
        >
          <a
            data-discover="true"
            href="/dashboard/comments"
          >
            <button
              class="_cancel_f3f658"
            >
              Cancel
            </button>
          </a>
        </div>
      </form>
    </section>
  </main>
</div>
`;

exports[`Comments > Comment edit > should submit comment edit and refresh page 1`] = `
<div>
  <main
    class="_CommentsEdit_5b6556"
  >
    <header
      class="_header_5b6556"
    >
      <h1>
        Comments
      </h1>
    </header>
    <section
      class="_CommentEdit_f3f658"
    >
      <div
        class="_header_f3f658"
      >
        <h2>
          Edit
        </h2>
        <h3
          class="_subHeader_f3f658"
        >
          Post: 
          Post title 1
        </h3>
        <h3
          class="_subHeader_f3f658"
        >
          Comment author: 
          foobar
        </h3>
      </div>
      <form
        class="_form_f3f658"
      >
        <div
          class="_textareaGroup_f3f658"
        >
          <label
            class="_label_f3f658"
            for="content"
          >
            Comment
          </label>
          <textarea
            class="_textarea_f3f658"
            id="content"
            name="content"
            type="text"
          >
            Updated comment content 1
          </textarea>
        </div>
        <div
          class="_selectGroup_f3f658"
        >
          <label
            class="_label_f3f658"
          >
            Status
          </label>
          <select
            class="_select_f3f658"
            name="status"
          >
            <option
              value="true"
            >
              Published
            </option>
            <option
              value="false"
            >
              Unpublished
            </option>
          </select>
        </div>
        <div
          class="_buttonContainer_f3f658"
        >
          <input
            class="_submit_f3f658"
            type="submit"
            value="Submit"
          />
        </div>
        <div
          class="_buttonContainer_f3f658"
        >
          <a
            data-discover="true"
            href="/dashboard/comments"
          >
            <button
              class="_cancel_f3f658"
            >
              Cancel
            </button>
          </a>
        </div>
      </form>
    </section>
  </main>
</div>
`;

exports[`Comments > should render comments 1`] = `
<div>
  <main
    class="_Comments_5b6556"
  >
    <header
      class="_header_5b6556"
    >
      <h1>
        Comments
      </h1>
    </header>
    <div
      class="_message_214590"
    >
      Loading...
    </div>
  </main>
</div>
`;
